--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "less-middleware": "^3.1.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
